--- a/app/views/appraisals_templates/_form.html.erb
+++ b/app/views/appraisals_templates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @appraisal, :html => { :class => "form-horizontal appraisal" } do |f| %>
+<%= form_for @appraisal, :url => appraisals_templates_path, method: :post, :html => { :class => "form-horizontal appraisal" } do |f| %>
   <div class="form-group">
     <%= f.label :name, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
