--- a/app/views/appraisals_templates/_form.html.erb
+++ b/app/views/appraisals_templates/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for @appraisal, :url => appraisals_templates_path, method: :post, :html => { :class => "form-horizontal appraisal" } do |f| %>
+ <fieldset>
+ <legend><%=t('appraisal_template_general_info')%></legend>
   <div class="form-group">
     <%= f.label :name, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
@@ -13,11 +14,18 @@
   </div>
   
   <%= f.hidden_field :template, value: true %>
- 
- <div class="form-actions">
+
+  <legend><%=t('appraisal_questions_info')%></legend>
+  <fieldset>
+    <%= f.fields_for :appraisal_questions do |builder| %>
+      <%= render 'appraisal_question_fields', f: builder %>
+    <% end %>
+    <div class="add-appraisal-question-div"><%= link_to_add_fields t("add_appraisal_question"), f, :appraisal_questions %></div>
+  </fieldset>
+
+  <div class="form-actions">
   	<%= f.submit nil, :class => 'btn btn-primary' %>
   	<%= link_to t("button_cancel"),
-            tpa_path, :class => 'btn btn-default' %>
+            appraisals_templates_path, :class => 'btn btn-default' %>
   </div>
-
-<% end %>
+</fieldset> 
