--- a/app/views/layout/_prepend.html.erb
+++ b/app/views/layout/_prepend.html.erb
@@ -2,7 +2,10 @@
     <%= stylesheet_link_tag 'tag_for_pa_application', :plugin => 'tag_for_pa' %>
     <%= stylesheet_link_tag 'bootstrap.min', :plugin => 'tag_for_pa' %>
     <%= stylesheet_link_tag 'font-awesome.min', :plugin => 'tag_for_pa' %>
+    <%= stylesheet_link_tag 'appraisals_templates', :plugin => 'tag_for_pa' %>
+    <%= stylesheet_link_tag 'appraisals_questions', :plugin => 'tag_for_pa' %>
     <%= javascript_include_tag 'bootstrap.min', :plugin => 'tag_for_pa' %>
+    <%= javascript_include_tag 'appraisals_templates', :plugin => 'tag_for_pa' %>
 <% end %>
 
 <h3 class="tpa-page-title"><%=title_for_tpa%></h3>
