Validations config for appraisal templates

--- a/app/views/appraisals/index.html.erb
+++ b/app/views/appraisals/index.html.erb
@@ -13,7 +13,7 @@
 	</table>
 	
 <% else %>
-	<div id='flash_error' class='flash error'><%=t('no_appraisals_found')%></div>
+	<div id='flash_warning' class='flash warning'><%=t('no_appraisals_found')%></div>
 <% end %>
 
 <%= render 'layout/append' %>
