--- a/assets/stylesheets/appraisals_questions.css
+++ b/assets/stylesheets/appraisals_questions.css
@@ -3,6 +3,7 @@
     border: 1px solid #eee;
     margin-bottom: 10px;
     padding-top: 12px;
+    padding-bottom: 10px;
 }
 
 .appraisals-question-options {
