--- a/app/views/appraisals_templates/index.html.erb
+++ b/app/views/appraisals_templates/index.html.erb
@@ -16,7 +16,7 @@
 	</table>
 
 <% else %>
-	<div id='flash_error' class='flash error'><%=t('no_appraisals_templates_found')%></div>
+	<div id='flash_warning' class='flash warning'><%=t('no_appraisals_templates_found')%></div>
 <% end %>
 
 <%= render partial: 'layout/append', locals: {create_url: new_appraisals_template_path} %>
