--- a/assets/stylesheets/tag_for_pa_application.css
+++ b/assets/stylesheets/tag_for_pa_application.css
@@ -36,6 +36,10 @@ dd {
     margin-right: 10px;
 }
 
+.span-danger {
+    color: #a94442;
+}
+
 .tpa-container a.active {
     background-color: #e5e5e5;
 }
@@ -52,9 +56,15 @@ dd {
     margin-left: -15px;
     margin-right: -15px;
     padding: 17px 20px 18px;
+    margin-top: 20px;
 }
 
 .tpa-content {
     padding-top: 20px;
     border: 1px solid #eee;
+}
+
+.restrict-dependency {
+    font-size: 12px;
+    color: #7f7f7f;
 }
