--- a/app/views/layout/_prepend.html.erb
+++ b/app/views/layout/_prepend.html.erb
@@ -7,6 +7,8 @@
     <%= javascript_include_tag 'bootstrap.min', :plugin => 'tag_for_pa' %>
     <%= javascript_include_tag 'appraisals_templates', :plugin => 'tag_for_pa' %>
     <%= javascript_include_tag 'tag_for_pa_application', :plugin => 'tag_for_pa' %>
+    <%= javascript_include_tag 'bootstrap-datepicker.min', :plugin => 'tag_for_pa' %>
+    <%= javascript_include_tag 'bootstrap-datepicker.pt-BR.min', :plugin => 'tag_for_pa' %>
 <% end %>
 
 <h3 class="tpa-page-title"><%=title_for_tpa%></h3>
