--- a/app/views/appraisals_templates/_appraisal_question_option_fields.html.erb
+++ b/app/views/appraisals_templates/_appraisal_question_option_fields.html.erb
@@ -7,14 +7,16 @@
         <span class="span-danger"><%= display_errors(f.object, :content) %></span><br/>
       </div>
       <div class="col-md-6" style="text-align: right;">
-        <% if any_restrict_dependecy?(f.object)  %>
+<!--    
+        <%# if any_restrict_dependecy?(f.object)  %>
           <span class="restrict-dependency">
-            <%= t('this_object_has_restrict_dependencies', :dependency => any_restrict_dependecy?(f.object).first) %>
+            <%#= t('this_object_has_restrict_dependencies', :dependency => any_restrict_dependecy?(f.object).first) %>
           </span>
-        <% else %>
+        <%# else %>
+ -->          
           <%= f.hidden_field :_destroy %>
-          <%= link_to t('remove_appraisal_question_option'), '#', class: "remove_fields" %>  
-        <% end %>
+          <%= link_to t('remove_appraisal_question_option'), '#', class: "remove_fields" %>
+        <%# end %>
       </div>
     </div>
   </div>
