--- a/app/views/appraisals_templates/show.html.erb
+++ b/app/views/appraisals_templates/show.html.erb
@@ -9,10 +9,10 @@
   <dt><strong><%= AppraisalQuestion.model_name.human.titleize.pluralize %>:</strong></dt>
 
   <% @appraisal.appraisal_questions.each do |aq| %>
-  <dt class="appraisal-questions-list"><%= aq.content %>:</dt>
+  <dt class="appraisal-questions-list"><i class="fa fa-angle-double-right"></i> <%= aq.content %>:</dt>
     <dd class="appraisal-questions-list">
       <% aq.appraisal_question_options.each do |qo| %>
-        <%= qo.content %><br/>
+        <i class="fa fa-angle-right"></i> <%= qo.content %><br/>
       <% end %>
     </dd>
   <% end %>
