--- a/app/views/appraisals/new.html.erb
+++ b/app/views/appraisals/new.html.erb
@@ -1,3 +1,3 @@
 <%= render 'layout/prepend' %>
 <%= render 'form' %>
-<%= render 'layout/append' %>
+<%= render partial: 'layout/append', locals: {bomb_text: t('helpers.links.creating'), bomb_icon: :bomb} %>
