--- a/app/views/appraisals/edit.html.erb
+++ b/app/views/appraisals/edit.html.erb
@@ -1,1 +1,3 @@
-<h2>AppraisalsController#edit</h2>
+<%= render 'layout/prepend' %>
+<%= render 'form' %>
+<%= render partial: 'layout/append', locals: {bomb_text: t('helpers.links.creating'), bomb_icon: :bomb} %>
