--- a/assets/stylesheets/appraisals_questions.css
+++ b/assets/stylesheets/appraisals_questions.css
@@ -14,9 +14,9 @@
     padding-top: 10px;
 }
 
-dt.appraisal-questions-list {
+dt.appraisal-lists {
     border-bottom: none;
 }
-dd.appraisal-questions-list {
+dd.appraisal-lists {
     margin-left: 5px;
 }
