--- a/app/views/appraisals/index.html.erb
+++ b/app/views/appraisals/index.html.erb
@@ -1,13 +1,18 @@
 <%= render 'layout/prepend' %>
+<%- model_class = Appraisal -%>
 
 <% if @appraisals.any? %>
 	<table class="table table-hover">
 		<thead>
-			<th>Nome</th>
+			<th><%= t('appraisal_template')%>:</th>
+			<th><%= t('appraisal_start_date')%>:</th>
 		</thead>
 		<tbody>
 			<% @appraisals.each do |a| %>
-				<td><%= a.name %></td>
+			<tr>
+				<td><%= link_to a.appraisal.first_60_name_words, appraisal_path(a) %></td>
+				<td><%= format_date(a.start_date) %></td>
+			</tr>
 			<% end %>
 		</tbody>
 	</table>
