--- a/app/views/layout/_prepend.html.erb
+++ b/app/views/layout/_prepend.html.erb
@@ -15,6 +15,7 @@
     <%= stylesheet_link_tag 'select2', :plugin => 'tag_for_pa' %>
     <%= javascript_include_tag 'bootstrap.min', :plugin => 'tag_for_pa' %>
     <%= javascript_include_tag 'appraisals_templates', :plugin => 'tag_for_pa' %>
+    <%= javascript_include_tag 'appraisals', :plugin => 'tag_for_pa' %>
     <%= javascript_include_tag 'tag_for_pa_application', :plugin => 'tag_for_pa' %>
     <%= javascript_include_tag 'select2.min', :plugin => 'tag_for_pa' %>
 <% end %>
