--- a/app/views/layout/_prepend.html.erb
+++ b/app/views/layout/_prepend.html.erb
@@ -11,6 +11,7 @@
     <%= stylesheet_link_tag 'bootstrap.min', :plugin => 'tag_for_pa' %>
     <%= stylesheet_link_tag 'font-awesome.min', :plugin => 'tag_for_pa' %>
     <%= stylesheet_link_tag 'appraisals_templates', :plugin => 'tag_for_pa' %>
+    <%= stylesheet_link_tag 'appraisals', :plugin => 'tag_for_pa' %>
     <%= stylesheet_link_tag 'appraisals_questions', :plugin => 'tag_for_pa' %>
     <%= stylesheet_link_tag 'select2', :plugin => 'tag_for_pa' %>
     <%= javascript_include_tag 'bootstrap.min', :plugin => 'tag_for_pa' %>
