--- a/app/views/appraisals_templates/_show.html.erb
+++ b/app/views/appraisals_templates/_show.html.erb
@@ -3,12 +3,12 @@
 
   <dl class="dl-horizontal">
     <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-    <dd><%= @appraisal.name %></dd>
+    <dd><%= appraisal.name %></dd>
     <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-    <dd><%= @appraisal.description %></dd>
+    <dd><%= appraisal.description %></dd>
     <dt><strong><%= AppraisalQuestion.model_name.human.titleize.pluralize %>:</strong></dt>
 
-    <% @appraisal.appraisal_questions.each do |aq| %>
+    <% appraisal.appraisal_questions.each do |aq| %>
     <dt class="appraisal-lists"><i class="fa fa-angle-double-right"></i> <%= aq.content %>:</dt>
       <dd class="appraisal-lists">
         <% aq.appraisal_question_options.each do |qo| %>
