--- a/assets/stylesheets/appraisals.css
+++ b/assets/stylesheets/appraisals.css
@@ -2,7 +2,11 @@
     background-color: #f5f5f5;
     border: 1px solid #ddd;
     margin-top: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin-bottom: 15px;
+    padding: 15px;
     border-radius: 3px;
+}
+
+#appraisal-template-info-content dl.dl-horizontal {
+	margin: 0;
 }
