Plugin name change and others improvements

--- a/app/views/appraisals_templates/edit.html.erb
+++ b/app/views/appraisals_templates/edit.html.erb
@@ -4,4 +4,4 @@
 	<%= render partial: 'form', locals: {f: f} %>
 <% end %>
 
-<%= render partial: 'layout/append', locals: {bomb_text: t('helpers.links.updating'), bomb_icon: 'smile-o'} %>
+<%= render partial: 'layout/append', locals: {bomb_text: t('helpers.links.updating'), bomb_icon: :bomb} %>
