--- a/app/views/appraisals/_form.html.erb
+++ b/app/views/appraisals/_form.html.erb
@@ -6,10 +6,18 @@
       <div class="col-sm-10">
         <%= f.collection_select :appraisal_id, Appraisal.where(template: true), :id, :first_60_name_words, {prompt: true}, class: 'form-control' %>
         <span class="span-danger"><%= display_errors(f.object, :appraisal_id) %></span> 
-
         <div id="appraisal-template-info"></div>
-
       </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label t('appraisal_appraiser'), :class => 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= hidden_field_tag 'appraisal[appraiser_ids][]', nil, style: 'width: 100%;' %>
+        <%= render partial: 'appraiser_select2_config', locals: {f: f} %>
+        <span class="span-danger"><%= display_errors(f.object, :appraiser_id) %></span> 
+      </div>
+      
     </div>
 
     <div class="form-group">
