--- a/assets/stylesheets/redmine_tpa_application.css
+++ b/assets/stylesheets/redmine_tpa_application.css
@@ -1,3 +1,8 @@
+.select2-container-multi .select2-choices {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
 .text-danger {
     color: #a94442;
 }
