--- a/app/views/appraisals/_form.html.erb
+++ b/app/views/appraisals/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label t('appraisal_appraiser'), :class => 'col-sm-2 control-label' %>
+      <%= f.label t('appraisal_appraisers'), :class => 'col-sm-2 control-label' %>
       <div class="col-sm-10">
         <%= hidden_field_tag 'appraisal[appraiser_ids][]', nil, style: 'width: 100%;' %>
         <%= render partial: 'appraiser_select2_config', locals: {f: f} %>
