--- a/app/views/redmine_tpa/index.html.erb
+++ b/app/views/redmine_tpa/index.html.erb
@@ -1,5 +1,8 @@
 <%= render 'layout/prepend' %>
 
-<h1><%= t('welcome_to_redmine_tpa') %></h1>
+<h1>
+	<%= t('welcome_to_redmine_tpa') %><br/>
+	<small><%= t('tpa') %></small>
+</h1>
 
 <%= render partial: 'layout/append', locals: {bomb_text: t('welcome'), bomb_icon: 'smile-o'} %>
