--- a/app/views/layout/_prepend.html.erb
+++ b/app/views/layout/_prepend.html.erb
@@ -7,18 +7,18 @@
 </script>
 
 <% content_for :header_tags do %>
-    <%= stylesheet_link_tag 'redmine_tpa_application', :plugin => 'redmine_tpa' %>
+    <%= stylesheet_link_tag 'redmine_tpa', :plugin => 'redmine_tpa' %>
     <%= stylesheet_link_tag 'bootstrap.min', :plugin => 'redmine_tpa' %>
     <%= stylesheet_link_tag 'font-awesome.min', :plugin => 'redmine_tpa' %>
     <%= stylesheet_link_tag 'appraisals_templates', :plugin => 'redmine_tpa' %>
     <%= stylesheet_link_tag 'appraisals', :plugin => 'redmine_tpa' %>
     <%= stylesheet_link_tag 'appraisals_questions', :plugin => 'redmine_tpa' %>
     <%= stylesheet_link_tag 'select2', :plugin => 'redmine_tpa' %>
+    <%= javascript_include_tag 'select2.min', :plugin => 'redmine_tpa' %>
     <%= javascript_include_tag 'bootstrap.min', :plugin => 'redmine_tpa' %>
     <%= javascript_include_tag 'appraisals_templates', :plugin => 'redmine_tpa' %>
     <%= javascript_include_tag 'appraisals', :plugin => 'redmine_tpa' %>
-    <%= javascript_include_tag 'redmine_tpa_application', :plugin => 'redmine_tpa' %>
-    <%= javascript_include_tag 'select2.min', :plugin => 'redmine_tpa' %>
+    <%= javascript_include_tag 'redmine_tpa', :plugin => 'redmine_tpa' %>
 <% end %>
 
 <h3 class="tpa-page-title"><%=title_for_tpa%></h3>
